# serenedb

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md  codestyle.md
.github/: copilot-instructions.md
.github/workflows/: simple.yml
cmake/: FindBoehmGC.cmake  FindBoost.cmake  FindLZ4.cmake  FindSNOWBALL.cmake  FindZLIB.cmake  Finduring.cmake  InstallMacros.cmake  InstallSereneDBJSClient.cmake  OptimizeForArchitecture.cmake  Runtime.cmake  SereneDBInstall.cmake  UpdateModule.cmake  Utils.cmake
etc/serenedb/: serene-init-database.conf.in  serene-secure-installation.conf.in  serened.conf.in
libs/: CMakeLists.txt
libs/app/: app_feature.cpp  app_feature.h  app_server.cpp  app_server.h  app_version.cpp  app_version.h  bump_file_descriptors.cpp  bump_file_descriptors.h  communication_phase.h  config.cpp  config.h  global_context.cpp  global_context.h  greetings.cpp  greetings.h  http_endpoint_provider.h  language.cpp  language.h  (+13 more)
libs/fuerte/: CMakeLists.txt  FuerteH1TCP.tla  StateDiagram-2020-04-20.excalidraw
libs/fuerte/include/fuerte/: asio_ns.h  connection.h  fuerte.h  helper.h  jwt.h  loop.h  message.h  requests.h  types.h
libs/fuerte/src/: asio_sockets.h  connection.cpp  connection_builder.cpp  general_connection.h  h1_connection.cpp  h1_connection.h  h2_connection.cpp  h2_connection.h  helper.cpp  http.cpp  http.h  jwt.cpp  loop.cpp  message.cpp  requests.cpp  types.cpp
resources/: CMakeLists.txt
server/: CMakeLists.txt
tests/: CMakeLists.txt
(+1505 files in other folders)
